--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 
 .Section_1{
-    background-image: url('./images/Rectangle\ 9.png');
+    background-image: url('../images/Rectangle\ 9.png');
     background-repeat: no-repeat;
     
 }
@@ -138,7 +138,7 @@
     justify-content: center;
 }   
 .section_3-content{
-    background-image: url('./images/Clip.png');
+    background-image: url('../images/Clip.png');
     background-color: #9F9ACF;
     background-repeat: no-repeat;
     background-position: center;
@@ -190,7 +190,7 @@
 }
 /*Section4*/
 .Section_4{
-background-image: url('./images/Bg.png');
+background-image: url('../images/Bg.png');
 display: block;
 text-align: center;
 position: relative;
@@ -367,7 +367,7 @@ padding-bottom: 2rem;
 
 /*section 6*/
 .Section_6{
-    background-image: url('./images/Bg-map.png');
+    background-image: url('../images/Bg-map.png');
     width: 100%; 
     height: 100%;
     background-position: center;
