--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 
 .Section_1{
-    background-image: url('../images/Rectangle\ 9.png');
+    background-image: url('../images/Rectangle9.png');
     background-repeat: no-repeat;
     
 }
@@ -39,22 +39,27 @@
     flex-wrap: nowrap;
     justify-content: space-around;
     color: #FFFFFF;
+    font-family:'ProximaSemibold';
+    font-size: 1.5rem;
 }
 
 .nav-menu-item{
-    margin-right: 1.4rem;
+    margin-right: 1.8rem;
     list-style-type: none;
     font-size: 1.2rem;
 }
 
 .header-title{
-    font-size: 3.6rem;
-    padding-top: 13.9rem;
+    font-family:'ProximaSemibold';
+    font-size: 4.0rem;
+    padding-top: 18rem;
     color:#FEFEFB;
     margin-left: 9.1rem;
+    font-weight: 300;
 }
 
 .header-subtitle{
+    font-family:'PTSans-Italic';
     font-size: 1.8rem;
     line-height: 1.75rem;
     padding-top: 0.8rem;
@@ -92,37 +97,44 @@
     
 }
 
-.block{
+.block-icon{
     position: absolute;
     display: block;
     text-align: center;
-    margin-top: -25rem;
-    margin-left: 6rem;
+    margin-top: -30rem;
+    margin-left: 6.3rem;
 }
+
 
 .section_2-subtitle {
     padding-top: 4.69rem;
     padding-right:1.76rem ;
-    padding-left:7.88rem ;
-    font-size: 1rem;
+    padding-left: 4.88rem ;
+    font-size: 1.25rem;
+    font-family:'PTSans-Regular';
+    
+    
    
 
 }
 .btn-learn{
     margin-left: 14.75rem;
     margin-top: 1.68rem;
+    color: #665F60;;
 }
 
 .btn{
     padding: 0.875rem 3.5rem;
     border: 1px solid #7D7A7C;
-    color: -internal-light-dark(none);
-    
+    font-family:'PTSans-Italic';
+    font-size: 1.25rem;
+    display: inline-block;
 }
 
 .section-title{
-    margin-top: 1.86rem;
     color: #FEFBFC;
+    font-family:'ProximaSemibold';
+    font-size: 2.2rem; ;
 
 }
 
@@ -157,19 +169,28 @@
 }
 .card-name{
     font-size: 1.2rem;
+    font-size: 'ProximaSemibold';
+   
+    padding-bottom: 1.2rem;
+    padding-top: 1.56rem;
 } 
 
 .icon-img{
-     padding-top: 5.1rem;
+     padding-top: 6.2rem;
 }
 
 .card{
+    color: #665F60;
     text-align: center;
     height: 400px;
 }
 
 .text{
     font-size: 1.13rem;
+    font-family:'PTSans-Italic';
+    display: inline-block;
+    width: 12.5rem;
+    
 }
 
 .section_3-icon{
@@ -177,16 +198,16 @@
 }
 
 .text-img{
-    padding-top: 6.75rem;
+    padding-top: 3.75rem;
     font-size: 1.12rem;
-    font-family: PTSans-Italic;
+    font-family: 'PTSans-Italic';
     text-align: justify;
     padding-right: 1.78rem;
     padding-left: 1.78rem;
 }
 
-.footnote{
-   font-family: PTSans-Bold;
+.text-footnote{
+   font-family:'PTSans-Bold';
 }
 /*Section4*/
 .Section_4{
@@ -197,15 +218,14 @@ position: relative;
 }
 
 .slideshow-container {
-  
     max-width: 730px;
     max-height: 546px;
     margin: auto;
   }
 
-  .mySlides {
+.mySlides {
     display: none;
-  }
+}
 
 .next{
     right: 10rem;
@@ -227,11 +247,12 @@ position: relative;
 
 .btn-prev, .btn-next{
     padding: 16px;
+    color:#665F60;
 }
 
-  .btn-prev:hover, .btn-next:hover {
+.btn-prev:hover, .btn-next:hover {
     background-color: #DBDBDB;
-  }
+}
   
 
 .dot {
@@ -243,18 +264,18 @@ position: relative;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-  }
+}
   
-  .active, .dot:hover {
+.active, .dot:hover {
     background-color: #717171;
-  }
+}
 
-  .fade {
+.fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
-  }
+}
   
   @-webkit-keyframes fade {
     from {opacity: .4}
@@ -266,7 +287,7 @@ position: relative;
     to {opacity: 1}
   }
 
-.dot-grop{
+.dot-group{
     display:block;
     text-align:center;
     margin-top: 2.8rem;
@@ -279,48 +300,100 @@ position: relative;
 .btn-gallery{
     margin-bottom: 4rem;
     text-align:center; 
-    opacity: 1;
-    background-color: -internal-light-dark(none), rgb(59, 59, 59);
-    color: -internal-light-dark(none);
+    opacity: 0 0 0 0.5;
+    background-color: #9F9ACF;
+    color: #FFFFFF;
+
+    
 }
 /*Section 5*/
 .Section_5{
-    padding-left: 13.43rem;
-    padding-right: 13.43rem;
     background-color: #EBEBEB;
     text-align: center;
-    padding: 4rem 13.43rem 5rem 13.43rem;
-}
-
-.conteiner-section5{
-    display: flex;
-    margin-top: 5.5rem;
+    padding: 4rem auto 5rem auto;
     position: relative;
 }
 
-.img-bg-about-us{
-padding-bottom: 2rem;
-}
-.slide-item1{
-     width: 100%;
-     flex-direction: row;
-     flex-wrap: wrap;
-     max-width: 22rem;
-     height: 19rem;
-     text-align: center;
-     margin-right: 2rem;
-     background-color: #FDFDFE;
-     justify-content: center;
+.multiple-items{
+   position: relative; 
+   min-width: 0;
+   width:1100px;
+   margin-right: auto;
+   margin-left: auto;
+   margin-top: 8.1rem;
+   padding-bottom: 6.1rem;
+   padding-left: 3.82rem;
+   padding-right: 3.82rem;
+    
 }
 
+
+.multiple-items.slide-item1{
+    min-width: 0;
+    width: calc(1/3*100% - 30px);
+}
+
+.img-bg-about-us{
+    padding-bottom: 2rem;
+}
+
+.slick-slider{
+    min-height: 0;
+}
+.slick-track{
+    display:flex;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+    
+}
+
+.slick-list{
+    overflow-y: visible!important;
+    overflow-x: hidden;
+}
+
+.multiple-items .slick-arrow{
+     position: absolute;
+     margin-top: -9rem;
+     top: 50%;
+     z-index: 10;
+     font-size: 0;
+    
+ }
+
+.multiple-items .slick-prev{
+    left: 0;
+    background-image: url('/images/interface-arrow-left.svg') no-repeat;
+    width: 1.38rem;
+    height:2.38rem;
+}
+
+ .multiple-items .slick-next{
+     right: 0;
+     background-image: url('/images/interface-arrow-right.svg') no-repeat;
+     width: 22px;
+     height: 38px;
+ }
+
+.slide-item1{ 
+     text-align: center;
+     background-color: #FDFDFE; 
+     margin: 0 15px;   
+}
+
+.card-body{
+    width: 100%;
+}
 .card-footer{
     background-color: #9F9ACF;
-    margin-top: 3.5rem;
     padding-bottom: .4rem;
     padding-top: 0.4rem;
 
 }
 
+.card-text{
+    padding-bottom: 2.5rem;
+}
 .overlay{
   color: #575091;
   font-weight: 700;
@@ -332,7 +405,7 @@ padding-bottom: 2rem;
 }
 
 .slide-item1-foto{
-
+   z-index: 15;
    margin-top: -7.5rem;
 }
 
@@ -342,19 +415,14 @@ padding-bottom: 2rem;
 }
 
 
-
-.btn-conteiner-section5-prev, .btn-conteiner-section5-next{
-    padding: 14px;
- 
-}
-
- .conteiner-section5-next .conteiner-section5-prev {
+ .conteiner-section5-next, .conteiner-section5-prev {
     cursor: pointer;
     transition: 0.6s ease;
     position: absolute;
-    top:30%;
-  
+    top:50%;
+    width: auto; 
 }
+
 .conteiner-section5-next{
     right: 10rem;
     border-radius: 3px 0 0 3px;
@@ -374,49 +442,98 @@ padding-bottom: 2rem;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    text-align: center;
 }
 
 .section-title{
+    padding-top: 3.38rem;
     padding-bottom: 3rem;
 }
-.sidenav  {
-    position: absolute;
-    
-    transition: 0.3s;
-    margin-left: 75rem;
-    text-decoration: none;
-    font-size: 20px;
-    
-    border-radius: 0 5px 5px 0;
+
+
+  .conteiner-adress{
+        width: 300px; /*задаем ширину блока*/
+        height:100px; /*задаем высоту блока*/
+        transform: translate(-50%, -50%);
+        position: absolute; 
+        top: 30%; 
+        left: 80%; 
   }
 
-  .sidenav a:hover {
-   padding-right: 20.7rem;
-
-  }
-  
-  .adress{
-    display: inline-block;
-    margin-top: 30px;
-    text-align: center;
-    background-color: #4CAF50;
-    padding-top: 20px;
-    padding-bottom: 15px;
-    padding-right: 15px;
-    padding-left: 10px;
-
-  }
-  
-  .phone{
-    display: inline-block;
-    padding-bottom: 15px;
-    padding-top: 25px;
-    padding-left: 23px;
-    padding-right: 25px;
-    background-color: #2196F3;
-    
+  .sidenav-conteiner{
+     display: inline-block;
+     width: 21.75rem;
+     font-size: 1.12rem;
+     text-align: center;
   }
 
-  .sidenav-item{
-      margin-bottom: 30px;
+  .btn-form{
+      background-color: #9F9ACF;
+      color: #FFFFFF;
+      margin-top: 3.2rem;
+      margin-bottom: 3.2rem;
+      border-radius: 4px;
+      font-family: 'ProximaBold';
+      font-size: 1rem;
   }
+
+#name{
+    width: 24rem;
+    color: #EBEBEB;
+    border-radius: 4px;
+    opacity: 0.5;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    margin-right: 1.80rem;
+    border-style: none;
+}
+.form-get{
+   padding-top: 13.62rem;
+
+}
+#email{
+    width: 24rem;
+    border-radius: 4px;
+    opacity: 0.5;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    border-style: none;
+}
+
+
+#message{
+    width: 50rem;
+    border-radius: 4px;
+    opacity: 0.5;
+    padding-top: 1rem;
+    padding-bottom: 12rem;
+    padding-left: 1rem;
+    border-style: none;
+}
+/*Footer*/
+.footer{
+    background-color: #9F9ACF;
+    color: #FFFFFF;
+    display: flex;
+    padding-left: 8.43rem;
+    padding-right: 8.43rem; 
+    padding-top: 4.68rem; 
+    padding-bottom: 4.69rem;
+}
+
+.footer-item{
+     width: 50%;
+     flex-direction: row;
+     flex-wrap: nowrap;
+}
+
+.item-right{
+   text-align: right;
+}
+
+.item-left{
+    text-align: left;
+    align-self: center;
+ }
