--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@
     background-repeat: no-repeat;
     
 }
+.conteiner-section1{
+
+}
 
 .nav-menu{
     display: flex;
@@ -28,21 +31,33 @@
 }
 
 
-.nav-menu-icon {
+.icon.nav-menu-icon {
     margin-right: 21.8rem;
     margin-top: -0.85rem;
 
 }
+
+.header-burger{
+
+ }
+
+.header-menu{
+
+ }
+
+
 .menu-items{
     display: flex;
     flex-direction:row;
     flex-wrap: nowrap;
     justify-content: space-around;
+    
+}
+.header-link{
     color: #FFFFFF;
     font-family:'ProximaSemibold';
     font-size: 1.5rem;
 }
-
 .nav-menu-item{
     margin-right: 1.8rem;
     list-style-type: none;
@@ -320,17 +335,23 @@ position: relative;
    width:1100px;
    margin-right: auto;
    margin-left: auto;
-   margin-top: 8.1rem;
+   margin-top: 2.1rem;
    padding-bottom: 6.1rem;
    padding-left: 3.82rem;
    padding-right: 3.82rem;
     
 }
-
+.slide-item1{
+     background-image: linear-gradient(180deg, transparent, transparent 30%, #fff 30%, #FFFFFF 100%); 
+     margin: 0 15px;
+}
 
 .multiple-items.slide-item1{
     min-width: 0;
     width: calc(1/3*100% - 30px);
+    text-align: center;
+    background-color: #FDFDFE; 
+      
 }
 
 .img-bg-about-us{
@@ -354,32 +375,28 @@ position: relative;
 
 .multiple-items .slick-arrow{
      position: absolute;
-     margin-top: -9rem;
+     margin-top: -6rem;
      top: 50%;
      z-index: 10;
-     font-size: 0;
+     font-size: 0; 
+     
     
  }
 
 .multiple-items .slick-prev{
-    left: 0;
-    background-image: url('/images/interface-arrow-left.svg') no-repeat;
-    width: 1.38rem;
-    height:2.38rem;
+    left: 0; 
+    background-image:url('../images/interface-arrow-left-dark.svg')  0 0 / 100% no-repeat;
+    width:1.38rem;
+    height: 1.38rem;
 }
 
  .multiple-items .slick-next{
      right: 0;
-     background-image: url('/images/interface-arrow-right.svg') no-repeat;
-     width: 22px;
-     height: 38px;
+     background-image: url('./images/interface-arrow-right-dark.svg') 0 0 no-repeat;
+     width:1.38rem;
+     height: 1.38rem;
  }
 
-.slide-item1{ 
-     text-align: center;
-     background-color: #FDFDFE; 
-     margin: 0 15px;   
-}
 
 .card-body{
     width: 100%;
@@ -406,7 +423,7 @@ position: relative;
 
 .slide-item1-foto{
    z-index: 15;
-   margin-top: -7.5rem;
+   transform: translate(0, 0);
 }
 
 
@@ -415,23 +432,6 @@ position: relative;
 }
 
 
- .conteiner-section5-next, .conteiner-section5-prev {
-    cursor: pointer;
-    transition: 0.6s ease;
-    position: absolute;
-    top:50%;
-    width: auto; 
-}
-
-.conteiner-section5-next{
-    right: 10rem;
-    border-radius: 3px 0 0 3px;
-}
-
-.conteiner-section5-prev {
-    left: 10rem;
-    border-radius: 3px 0 0 3px; 
-}
 
 /*section 6*/
 .Section_6{
@@ -452,19 +452,14 @@ position: relative;
 
 
   .conteiner-adress{
-        width: 300px; /*задаем ширину блока*/
-        height:100px; /*задаем высоту блока*/
-        transform: translate(-50%, -50%);
-        position: absolute; 
-        top: 30%; 
-        left: 80%; 
+       
   }
 
   .sidenav-conteiner{
-     display: inline-block;
+     display: inline;
      width: 21.75rem;
      font-size: 1.12rem;
-     text-align: center;
+     height:100px;
   }
 
   .btn-form{
@@ -511,6 +506,14 @@ position: relative;
     padding-bottom: 12rem;
     padding-left: 1rem;
     border-style: none;
+}
+
+.arrow-up{
+    position: fixed;
+    padding: 1rem 1rem;
+    background-color: #9F9ACF;
+    top: 25rem;
+    right: 6rem;
 }
 /*Footer*/
 .footer{
